configs/tailscale/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale
  labels:
    app.kubernetes.io/name: tailscale
    app.kubernetes.io/part-of: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tailscale
      app.kubernetes.io/part-of: tailscale
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tailscale
        app.kubernetes.io/part-of: tailscale
    spec:
      serviceAccountName: tailscale
      terminationGracePeriodSeconds: 300
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.36
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
            limits:
              cpu: 1
              memory: 1Gi
