configs/tailscale/proxy-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: tailscale
  ingress:
    # Entire telnet should be able to reach the proxy
    - fromEntities:
        - world
  egress:
    # Allow proxy to talk to tailscale service (currently no idea what type of connections)
    - toEntities:
        - world
    # Allow proxy to forward requests to ingress-nginx
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
